--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
 		"typescript": "^3.7.5"
 	},
 	"dependencies": {
-		"colors": "^1.4.0",
+		"chalk": "^4.0.0",
 		"eris": "^0.11.2",
-		"reflect-metadata": "^0.1.13"
+		"reflect-metadata": "^0.1.13",
+		"winston": "^3.2.1"
 	}
 }
